--- a/Probability_Cover_Cards.html
+++ b/Probability_Cover_Cards.html
@@ -37,11 +37,11 @@ class: center, middle, inverse, title-slide
 &lt;/style&gt;
 
 ## Probability Distributions
-### Estimating the Poisson Rate Parameter
-### Analyzing Insurance Transaction Data for Premiums and Claims
+### Exponential Distribution
+### Simulation and Analysis Using The Inverse Transform Method
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 ## &lt;tt&gt;Probability with R&lt;/tt&gt;
-### &lt;tt&gt;CS2B (ASI, March 2021)&lt;/tt&gt;
+### &lt;tt&gt;CS1B (FIA, September 2023)&lt;/tt&gt;
 
 ---
 
