--- a/gg_roc.html
+++ b/gg_roc.html
@@ -3,8 +3,9 @@
   <head>
     <title>Statistics with R</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.21/header-attrs.js"></script>
-    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+    <script src="libs/header-attrs-2.29/header-attrs.js"></script>
+    <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
+    <link href="libs/remark-css-0.0.1/default-fonts.css" rel="stylesheet" />
   </head>
   <body>
     <textarea id="source">
@@ -14,7 +15,7 @@ class: center, middle, inverse, title-slide
 # Statistics with R
 ]
 .subtitle[
-## Introduction to R for Actuarial Students
+## Statistical Modelling with R for Actuarial Students
 ]
 
 ---
@@ -22,107 +23,61 @@ class: center, middle, inverse, title-slide
 
 
 
-
-
-
-* Introduction to R for Actuarial Students
-
-* CS1B Curriculum
-
-* Introduction to R programming
-* Fundamentals of Statistical Analysis
-
-* Question 1
-
----
-
-
-1 (i) Simulate 10,000 samples from an Exp(3) distribution, each of size n = 10,
-using the inverse transform method. You should save the generated values in
-R for later use.
-
-* You must use the command &lt;tt&gt;set.seed(3202)&lt;/tt&gt; to initialise the random
-number generator, before you start the simulation. 
-
-(ii) Plot a histogram of the means of the samples generated in part (i), using an
-appropriate option in R for plotting the histogram on the probability density
-scale. 
-
----
-
-### Exercises
-
-(iii) Plot the Probability Density Function (PDF) of the sampling distribution of the
-sample mean, under the Central Limit Theorem (CLT), corresponding to the
-samples generated in part (i). 
-
-The graph of the PDF should be superimposed
-on the histogram produced in part (ii). 
-
-(iv) Comment on the sampling distribution of the sample mean and the application
-of the CLT in this case based on your answers to parts (ii) and (iii). 
-
----
-Q1
-(i)
-R code:
-
-
-```r
-set.seed(3202)
-n = 10; theta = 3
-m1 = matrix(0,nrow=10^4,ncol=n) # Initialise matrix, each sample in a row
-for (i in 1:10^4){ 
-u = runif(n,0,1) 
-m= - log(1-u)/theta # Generate samples in rows 
-m1[i,] = m 
+&lt;style type="text/css"&gt;
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
 }
+&lt;/style&gt;
+
+
+---
+
+
+``` r
+library(ggRandomForests)
 ```
 
----
-
-(ii)
-R Code:
-
-
-```r
-xbar.a = apply(m1,1,mean) 
-hist(xbar.a,freq=F,main="Sampling distribution of Xbar")
+```
+## Loading required package: randomForestSRC
 ```
 
-![](R1-Question-1_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
-
----
-(iii)
-Using the CLT, the sampling distribution should be N(1/3, 1/90). 
-R code:
-
-
-```r
-hist(xbar.a,freq=F,main="Sampling distribution of Xbar")
-x.grid = seq(0,1,length=1000) 
-lines(x.grid,dnorm(x.grid,1/3,sqrt(1/90))) 
+```
+## 
+##  randomForestSRC 3.3.1 
+##  
+##  Type rfsrc.news() to see new features, changes, and bug fixes. 
+## 
 ```
 
-![](R1-Question-1_files/figure-html/unnamed-chunk-3-1.png)&lt;!-- --&gt;
+```
+## Loading required package: randomForest
+```
+
+```
+## randomForest 4.7-1.2
+```
+
+```
+## Type rfNews() to see new features/changes/bug fixes.
+```
+
+```
+## 
+## Attaching package: 'randomForest'
+```
+
+```
+## The following object is masked from 'package:dplyr':
+## 
+##     combine
+```
+
 
 ---
 
-The curve shows the exact pdf of the sampling distribution. 
-(iv)
 
-
----
-
-* The sampling distribution is relatively asymmetrical compared to the normal. 
-* The CLT does not work very well here 
-as the sample size is small (n = 10).
-
----
-
----
-
----
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
