--- a/00-T1-CS1B-FIA-April-2024/T1_Question_02.html
+++ b/00-T1-CS1B-FIA-April-2024/T1_Question_02.html
@@ -1,44 +1,37 @@
+<!DOCTYPE html>
+<html lang="" xml:lang="">
+  <head>
+    <title>Statistics with R</title>
+    <meta charset="utf-8" />
+    <script src="libs/header-attrs-2.29/header-attrs.js"></script>
+    <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+  </head>
+  <body>
+    <textarea id="source">
+class: center, middle, inverse, title-slide
+
+.title[
+# Statistics with R
+]
+.subtitle[
+## Introduction to R for Actuarial Students
+]
+
 ---
-title: "Statistics with R"
-subtitle: "Introduction to R for Actuarial Students"
-output:
-  xaringan::moon_reader:
-    css: xaringan-themer.css
-    lib_dir: libs
-    nature:
-      highlightStyle: github
-      countIncrementalSlides: false
----
 
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-library(magrittr)
-library(knitr)
-library(dplyr)
-library(janitor)
 
 
-```
 
-```{r xaringan-themer, include=FALSE, warning=FALSE}
-library(xaringanthemer)
-style_mono_accent_inverse(
-  #base_color = "#3C989E")(
-  base_color = "#1c5253",
-  header_font_google = google_font("Josefin Sans"),
-  text_font_google   = google_font("Montserrat", "300", "300i"),
-  code_font_google   = google_font("Fira Mono")
-)
-```
 
-```{css, echo=FALSE}
+
+&lt;style type="text/css"&gt;
 pre {
   background: #ADD8E6;
   max-width: 100%;
   overflow-x: scroll;
 }
-```
+&lt;/style&gt;
 
 2 A financial consultancy working with large firms wishes to model the relationship
 between a firm’s assets and the number of senior management positions in the firm.
@@ -73,11 +66,14 @@ Here are the solutions to the given problem, step by step:
 
 ### (i) Plot the number of senior management positions as a function of assets:
 
-```{r}
+
+``` r
 load("StoredData/firms.RData")
 plot(assets, sn_positions, xlab = "Assets", 
      ylab = "Number of senior positions", main = "Firm's assets vs number of senior positions")
 ```
+
+![](T1_Question_02_files/figure-html/unnamed-chunk-2-1.png)&lt;!-- --&gt;
 This code produces a scatterplot showing the relationship between a firm's assets and the number of senior management positions.
 
 ---
@@ -100,9 +96,14 @@ In part (i), the variable assets is extremely widespread, making it difficult to
 
 ### (iv) Calculate the mean of the number of senior management positions:
 
-```{r}
+
+``` r
 mu = mean(sn_positions) 
 mu
+```
+
+```
+## [1] 13.58065
 ```
 The mean number of senior management positions is calculated as approximately 13.58065.
 
@@ -110,7 +111,8 @@ The mean number of senior management positions is calculated as approximately 13
 
 ### (v) Generate a sample of size equal to the number of firms from a Poisson distribution:
 
-```{r}
+
+``` r
 set.seed(222)
 theoretical_samp = rpois(length(sn_positions), mu) 
 ```
@@ -147,20 +149,26 @@ These steps and comments cover the solution to the given problem. If you have fu
 ---
 Q2
 (i)
-```{r}
+
+``` r
 plot(assets,sn_positions, xlab="Assets", ylab="Number of senior positions", main="Firm's assets vs number of senior positions") 
 ```
+
+![](T1_Question_02_files/figure-html/unnamed-chunk-5-1.png)&lt;!-- --&gt;
 
 ---
 
 (ii)
-```{r}
+
+``` r
 log10_assets = log10(assets) 
 plot(log10_assets,sn_positions, xlab="Assets transforms at log10 scale", 
 ylab="Number of senior positions", main="Firm's assets (log10) vs number of senior positions") 
 ```
 
-<p>
+![](T1_Question_02_files/figure-html/unnamed-chunk-6-1.png)&lt;!-- --&gt;
+
+&lt;p&gt;
 ---
 
 
@@ -168,14 +176,20 @@ ylab="Number of senior positions", main="Firm's assets (log10) vs number of seni
 The variable assets is extremely widespread in part (i). 
 Taking the log10 of the assets in (ii) helps to show an increasing relationship between the variables. 
 (iv)
-```{r}
+
+``` r
 mu = mean(sn_positions) 
 mu
 ```
 
+```
+## [1] 13.58065
+```
+
 13.58065 
 (v)
-```{r}
+
+``` r
 set.seed(222)
 theoretical_samp = rpois(length(sn_positions), mu) 
 ```
@@ -183,22 +197,28 @@ theoretical_samp = rpois(length(sn_positions), mu)
 ---
 
 (vi)
-```{r}
+
+``` r
 hist(theoretical_samp,
      xlim=c(0,100), ylim=c(0,100), 
      main = "Distribution of simulated senior positions", xlab="Number of senior positions") 
 ```
-<p>
+
+![](T1_Question_02_files/figure-html/unnamed-chunk-9-1.png)&lt;!-- --&gt;
+&lt;p&gt;
 ---
 
-```{r}
+
+``` r
 hist(sn_positions, breaks=20,xlim=c(0,100), ylim=c(0,100), 
 	main="Distribution of observed senior positions", xlab="Number of senior positions") 
 ```
 
+![](T1_Question_02_files/figure-html/unnamed-chunk-10-1.png)&lt;!-- --&gt;
+
 (vii)
 We can see that the two distributions are very different. 
-<p>
+&lt;p&gt;
 ---
 
 For example, we can see an over-representation of zero values in the observed counts. 
@@ -214,3 +234,121 @@ Commentary:
 (iv), (v) Very well answered.
 (vi) Mixed answers. While most candidates produced the two plots, in many cases the axes were not matched. Suboptimal titles and/or axis labels were used in some cases.
 (vii) Most candidates correctly observed that the distributions are different, but failed to comment specifically on the data not following the Poisson distribution that we have here.
+    </textarea>
+<style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
+<script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
+<script>var slideshow = remark.create({
+"highlightStyle": "github",
+"countIncrementalSlides": false
+});
+if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
+  window.dispatchEvent(new Event('resize'));
+});
+(function(d) {
+  var s = d.createElement("style"), r = d.querySelector(".remark-slide-scaler");
+  if (!r) return;
+  s.type = "text/css"; s.innerHTML = "@page {size: " + r.style.width + " " + r.style.height +"; }";
+  d.head.appendChild(s);
+})(document);
+
+(function(d) {
+  var el = d.getElementsByClassName("remark-slides-area");
+  if (!el) return;
+  var slide, slides = slideshow.getSlides(), els = el[0].children;
+  for (var i = 1; i < slides.length; i++) {
+    slide = slides[i];
+    if (slide.properties.continued === "true" || slide.properties.count === "false") {
+      els[i - 1].className += ' has-continuation';
+    }
+  }
+  var s = d.createElement("style");
+  s.type = "text/css"; s.innerHTML = "@media print { .has-continuation { display: none; } }";
+  d.head.appendChild(s);
+})(document);
+// delete the temporary CSS (for displaying all slides initially) when the user
+// starts to view slides
+(function() {
+  var deleted = false;
+  slideshow.on('beforeShowSlide', function(slide) {
+    if (deleted) return;
+    var sheets = document.styleSheets, node;
+    for (var i = 0; i < sheets.length; i++) {
+      node = sheets[i].ownerNode;
+      if (node.dataset["target"] !== "print-only") continue;
+      node.parentNode.removeChild(node);
+    }
+    deleted = true;
+  });
+})();
+// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
+// screen reader (see PR #262)
+(function(d) {
+  let res = {};
+  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
+    const t = tr.querySelector('td:nth-child(2)').innerText;
+    tr.querySelectorAll('td:first-child .key').forEach(key => {
+      const k = key.innerText;
+      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
+    });
+  });
+  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
+})(document);
+(function() {
+  "use strict"
+  // Replace <script> tags in slides area to make them executable
+  var scripts = document.querySelectorAll(
+    '.remark-slides-area .remark-slide-container script'
+  );
+  if (!scripts.length) return;
+  for (var i = 0; i < scripts.length; i++) {
+    var s = document.createElement('script');
+    var code = document.createTextNode(scripts[i].textContent);
+    s.appendChild(code);
+    var scriptAttrs = scripts[i].attributes;
+    for (var j = 0; j < scriptAttrs.length; j++) {
+      s.setAttribute(scriptAttrs[j].name, scriptAttrs[j].value);
+    }
+    scripts[i].parentElement.replaceChild(s, scripts[i]);
+  }
+})();
+(function() {
+  var links = document.getElementsByTagName('a');
+  for (var i = 0; i < links.length; i++) {
+    if (/^(https?:)?\/\//.test(links[i].getAttribute('href'))) {
+      links[i].target = '_blank';
+    }
+  }
+})();</script>
+
+<script>
+slideshow._releaseMath = function(el) {
+  var i, text, code, codes = el.getElementsByTagName('code');
+  for (i = 0; i < codes.length;) {
+    code = codes[i];
+    if (code.parentNode.tagName !== 'PRE' && code.childElementCount === 0) {
+      text = code.textContent;
+      if (/^\\\((.|\s)+\\\)$/.test(text) || /^\\\[(.|\s)+\\\]$/.test(text) ||
+          /^\$\$(.|\s)+\$\$$/.test(text) ||
+          /^\\begin\{([^}]+)\}(.|\s)+\\end\{[^}]+\}$/.test(text)) {
+        code.outerHTML = code.innerHTML;  // remove <code></code>
+        continue;
+      }
+    }
+    i++;
+  }
+};
+slideshow._releaseMath(document);
+</script>
+<!-- dynamically load mathjax for compatibility with self-contained -->
+<script>
+(function () {
+  var script = document.createElement('script');
+  script.type = 'text/javascript';
+  script.src  = 'https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML';
+  if (location.protocol !== 'file:' && /^https?:/.test(script.src))
+    script.src  = script.src.replace(/^https?:/, '');
+  document.getElementsByTagName('head')[0].appendChild(script);
+})();
+</script>
+  </body>
+</html>
